# outlines-mlx

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: Examples-Copy1.ipynb  Examples.ipynb  Readme.md  prompt-Copy1.ipynb  prompt.ipynb
examples/.ipynb_checkpoints/: Examples-checkpoint.ipynb  Examples-mlx-community-checkpoint.ipynb  prompt-Copy1-checkpoint.ipynb  prompt-checkpoint.ipynb
outlines/: _version.py  base.py  caching.py  function.py  prompts.py
outlines/fsm/: fsm.py  json_schema.py  parsing.py  types.py
outlines/models/: mlx.py  tokenizer.py
outlinesmlx/: __init__.py  function.py  samplers.py  samplers_mlx.py
outlinesmlx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outlinesmlx/fsm/: fsm.py  regex_pure_numpy.py
outlinesmlx/generate/: __init__.py  api.py  api_mlx.py  cfg.py  choice.py  format.py  generator.py  generator_mlx.py  json.py  regex.py  text.py
outlinesmlx/models/: __init__.py  mlx.py
outlinesmlx/models/mlx_models/: Mistral7B.py  Phi2.py  tiny_llama.py
outlinesmlx/text/generate/: __init__.py  api.py  api_mlx.py
